[project]
name = "resume-crtique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.3",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "openai>=2.11.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
]
